@@ -1,8 +1,17 @@
+2009-02-28  Perry McFarlane  <perry_m@fastmail.fm>
+* /DOC/USAGE akey.h atari_sdl.c javanvm/atari_javanvm.c input.[ch]: Emulate CX85 numeric keypad
+
+
 2009-02-25  Perry McFarlane  <perry_m@fastmail.fm>
   Commiting patch submitted by Krótki with my changes <kr0tki@poczta.onet.pl>
 * atari.c atari_sdl.c atari_ntsc.[ch] configure.ac platform.h ui.c: NTSC
 Filter option in the UI.
 
+M ./DOC/USAGE +9
+M ./src/akey.h +17
+M ./src/atari_sdl.c +40
+M ./src/input.c +66
+M ./src/input.h +1
 
 2009-02-05  Perry McFarlane  <perry_m@fastmail.fm>
   Commiting patch submitted by Krótki <kr0tki@poczta.onet.pl>
